--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                 cumque?
               </p>
               <div class="about-link wow fadeInUp" data-wow-delay="0.6s">
-                <a href="about.html">MORE INFO</a>
+                <a to="about.html">MORE INFO</a>
               </div>
             </div>
           </div>
@@ -154,16 +154,10 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6">
-                <div class="arrow-down">
-                  <ion-icon
-                    name="arrow-down"
-                    class="wow fadeInUp"
-                    data-wow-delay="0.2s"
-                  ></ion-icon>
-                </div>
+                <h1 class="wow fadeInUp" data-wow-delay="0.3s">LMAO</h1>
               </div>
               <div class="project-heading col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">SHIT I ENJOY</h1>
+                <h1 class="wow fadeInUp" data-wow-delay="0.3s">SOME TEXT</h1>
                 <p class="wow fadeInUp" data-wow-delay="0.4s">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Aliquam quaerat sunt architecto veritatis suscipit nostrum
@@ -172,94 +166,7 @@
               </div>
             </div>
           </div>
-          <div class="projects">
-            <div class="row project-row">
-              <div class="project project-1 col-lg-6">
-                <img
-                  src="project-1.jpg"
-                  class="project-1-img project-img img-responsive fit-image"
-                />
-              </div>
-              <div class="project project-2 col-lg-6">
-                <img
-                  src="project-2.jpg"
-                  class="project-2-img project-img img-responsive fit-image"
-                />
-              </div>
-            </div>
-            <div class="row project-row">
-              <div class="project project-3 col-lg-6">
-                <img
-                  src="project-3.jpg"
-                  class="project-3-img project-img img-responsive fit-image"
-                />
-              </div>
-              <div class="project project-4 col-lg-6">
-                <img
-                  src="project-4.jpg"
-                  class="project-4-img project-img img-responsive fit-image"
-                />
-              </div>
-            </div>
-            <div class="row project-row">
-              <div class="project project-5 col-lg-6">
-                <img
-                  src="project-5.jpg"
-                  class="project-5-img project-img img-responsive fit-image"
-                />
-              </div>
-              <div class="project project-6 col-lg-6">
-                <img
-                  src="project-6.jpg"
-                  class="project-6-img project-img img-responsive fit-image"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <a name="contact"></a>
-      <section class="social-media">
-        <div class="container">
-          <div class="row">
-            <div class="sm-heading col-lg-6">
-              <h1 class="wow fadeInUp" data-wow-delay="0.2s">Reach out</h1>
-            </div>
-            <div class="sm-content col-lg-6">
-              <h3 class="wow fadeInUp" data-wow-delay="0.4s">
-                matanrhorowitz@gmail.com
-              </h3>
-              <p class="wow fadeInUp" data-wow-delay="0.5s">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Incidunt quo similique eaque ducimus quibusdam, dolorum
-                reprehenderit cumque. Dolorem, placeat. Similique!
-              </p>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Distinctio ducimus natus hic dolorem voluptate dolore officiis
-                neque aperiam similique! Obcaecati vel et atque nesciunt quia
-                quis expedita nulla, cum autem eius itaque incidunt, ut delectus
-                vitae. Cupiditate minima debitis aliquam!
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-12 text-left">
-            <div class="social-icons">
-              <ul>
-                <li class="wow fadeInUp" data-wow-delay="0.7s">
-                  <a to="https://www.facebook.com/matan.horowitz">fasscebook</a>
-                </li>
-                <li class="wow fadeInUp" data-wow-delay="0.8s">
-                  <a href="#">instagram</a>
-                </li>
-                <li class="wow fadeInUp" data-wow-delay="0.9s">
-                  <a href="#">twitter</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        
       </section>
     </div>
     <script>
