added photography and about page

--- a/about.html
+++ b/about.html
@@ -85,12 +85,12 @@
 
         <!-- HERO-IMAGE -->
         <div class="hero-img">
-          <img src="hero-bg.jpg" class="hero-img-parallax" />
+          <img src="hero-bg.jpg" class="about-img"/>
         </div>
 
         <!-- HERO-TITLE -->
         <div class="hero-title">
-          <h1>MATAN.HOROWITZ</h1>
+          <h1>ABOUT</h1>
         </div>
         <div class="overlay">
           <div class="close-btn">
@@ -99,13 +99,13 @@
           <div class="menu">
             <ul>
               <li>
-                <a href="#home">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
-                <a href="#about">About</a>
+                <a href="about.html">About</a>
               </li>
               <li>
-                <a href="#projects">Projects</a>
+                <a href="photography.html">Photography</a>
               </li>
               <li>
                 <a href="#contact">Contact</a>
@@ -120,7 +120,7 @@
         <div class="container">
           <div class="row">
             <div class="about-heading col-lg-6">
-              <h1 class="wow fadeInUp" data-wow-delay="0.2s">About</h1>
+                <img src="about-img.jpg" class="hero-img-parallax" height="310px"/>
             </div>
             <div class="about-content col-lg-6">
               <h3 class="wow fadeInUp" data-wow-delay="0.3s">
@@ -140,9 +140,6 @@
                 Repellendus, qui. Corporis voluptas optio doloribus, at quidem
                 cumque?
               </p>
-              <div class="about-link wow fadeInUp" data-wow-delay="0.6s">
-                <a to="about.html">MORE INFO</a>
-              </div>
             </div>
           </div>
         </div>
@@ -185,7 +182,7 @@
           opacity: [0, 1],
           easing: "easeOutExpo",
           duration: 1400,
-          delay: (el, i) => 2000 + 40 * i
+          delay: (el, i) => 700 + 40 * i
         });
       });
 
