--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
             </li>
             <li>
-              <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+              <a href="www.twitter.com/matan"><ion-icon name="logo-twitter"></ion-icon></a>
             </li>
           </ul>
         </div>
@@ -99,13 +99,13 @@
           <div class="menu">
             <ul>
               <li>
-                <a href="#home">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
-                <a href="#about">About</a>
+                <a href="about.html">About</a>
               </li>
               <li>
-                <a href="#projects">Projects</a>
+                <a href="photography.html">Photography</a>
               </li>
               <li>
                 <a href="#contact">Contact</a>
@@ -163,7 +163,7 @@
                 </div>
               </div>
               <div class="project-heading col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">SHIT I ENJOY</h1>
+                <h1 class="wow fadeInUp" data-wow-delay="0.3s"></h1>
                 <p class="wow fadeInUp" data-wow-delay="0.4s">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Aliquam quaerat sunt architecto veritatis suscipit nostrum
@@ -254,7 +254,7 @@
                   <a href="#">instagram</a>
                 </li>
                 <li class="wow fadeInUp" data-wow-delay="0.9s">
-                  <a href="#">twitter</a>
+                  <a href="www.twitter.com/matan">twitter</a>
                 </li>
               </ul>
             </div>
@@ -278,7 +278,7 @@
           opacity: [0, 1],
           easing: "easeOutExpo",
           duration: 1400,
-          delay: (el, i) => 2000 + 40 * i
+          delay: (el, i) => 700 + 40 * i
         });
       });
 
@@ -302,7 +302,7 @@
         y: 20,
         opacity: 0,
         ease: Expo.easeInOut,
-        delay: 1.4
+        delay: 0.1
       });
 
       TweenMax.staggerFrom(
@@ -312,7 +312,7 @@
           y: 20,
           opacity: 0,
           ease: Expo.easeInOut,
-          delay: 1.6
+          delay: 0.1
         },
         0.1
       );
