added porfolio button

--- a/photography.html
+++ b/photography.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="ig: @harrnish / @codegridweb" />
     <link rel="icon" href="hero-bg.jpg">
-    <title>MATAN HOROWITZ</title>
+    <title>Photography - Matan Horowitz</title>
     <link rel="stylesheet" href="style.css" />
 
     <!-- ANIMEJS -->
@@ -67,7 +67,7 @@
         <div class="media">
           <ul>
             <li>
-              <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+              <a href="https://www.facebook.com/matan.horowitz"><ion-icon name="logo-facebook"></ion-icon></a>
             </li>
             <li>
               <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
