--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="ig: @harrnish / @codegridweb" />
     <link rel="icon" href="hero-bg.jpg">
-    <title>MATAN HOROWITZ</title>
+    <title>About - Matan Horowitz</title>
     <link rel="stylesheet" href="style.css" />
 
     <!-- ANIMEJS -->
@@ -67,7 +67,7 @@
         <div class="media">
           <ul>
             <li>
-              <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+              <a href="https://www.facebook.com/matan.horowitz"><ion-icon name="logo-facebook"></ion-icon></a>
             </li>
             <li>
               <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -151,10 +151,13 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">LMAO</h1>
+                <h1 class="wow fadeInUp" data-wow-delay="0.3s">RESUME</h1>
+                <div class="pdf-link wow fadeInUp" data-wow-delay="0.6s">
+                    <a href="#PORTFOLIO">DOWNLOAD RESUME</a>
+                  </div>
               </div>
               <div class="project-heading col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">SOME TEXT</h1>
+                <h1 class="wow fadeInUp" data-wow-delay="0.3s">Portfolio</h1>
                 <p class="wow fadeInUp" data-wow-delay="0.4s">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Aliquam quaerat sunt architecto veritatis suscipit nostrum
