added contact page

--- a/about.html
+++ b/about.html
@@ -148,25 +148,16 @@
       <a name="projects"></a>
       <section class="project-section">
         <div class="container-fluid">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">RESUME</h1>
-                <div class="pdf-link wow fadeInUp" data-wow-delay="0.6s">
-                    <a href="#PORTFOLIO">DOWNLOAD RESUME</a>
+                  <h1 class="wow fadeInUp resume" data-wow-delay="0.3s">RESUME</h1>
+                  <div class="pdf-link wow fadeInUp resume" data-wow-delay="0.6s">
+                      <a href="#PORTFOLIO">DOWNLOAD RESUME</a>
                   </div>
-              </div>
-              <div class="project-heading col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">Portfolio</h1>
-                <p class="wow fadeInUp" data-wow-delay="0.4s">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam quaerat sunt architecto veritatis suscipit nostrum
-                  amet dicta ut, nobis modi.
-                </p>
-              </div>
-            </div>
-          </div>
-        
+                  <h1 class="wow fadeInUp portfolio" data-wow-delay="0.3s">MATAN HOROWITZ</h1>
+                    <p class="wow fadeInUp portfolio-1" data-wow-delay="0.4s">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aliquam quaerat sunt architecto veritatis suscipit nostrum
+                      amet dicta ut, nobis modi.
+                    </p>
       </section>
     </div>
     <script>
