--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
               </div>
               <div class="project-heading col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s"></h1>
+                <h1 class="wow fadeInUp" data-wow-delay="0.3s">BREATHE</h1>
                 <p class="wow fadeInUp" data-wow-delay="0.4s">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Aliquam quaerat sunt architecto veritatis suscipit nostrum
@@ -319,7 +319,7 @@
 
       t1.to(".overlay", 1, {
         opacity: 1,
-        ease: Expo.easeInOut
+        ease: Expo.easeInOut,
       });
 
       t1.to(".view-photos, .media", 1, {
@@ -330,7 +330,7 @@
       t1.staggerFrom(
         ".menu ul li",
         1,
-        { y: 100, opacity: 0, ease: Expo.easeOut },
+        { y: 50, opacity: 0,},
         0.1
       );
 
