--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                             <a href="photography.html">Photography</a>
                         </li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
