--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <a href="photography.html">Photography</a>
               </li>
               <li>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
