--- a/index.html
+++ b/index.html
@@ -153,21 +153,10 @@
         <div class="container-fluid">
           <div class="container">
             <div class="row">
-              <div class="col-lg-6">
-                <div class="arrow-down">
-                  <ion-icon
-                    name="arrow-down"
-                    class="wow fadeInUp"
-                    data-wow-delay="0.2s"
-                  ></ion-icon>
-                </div>
-              </div>
               <div class="project-heading col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">BREATHE</h1>
+                <h1 class="wow fadeInUp" data-wow-delay="0.3s">Welcome</h1>
                 <p class="wow fadeInUp" data-wow-delay="0.4s">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam quaerat sunt architecto veritatis suscipit nostrum
-                  amet dicta ut, nobis modi.
+                  I welcome you to my small photogallery, if you would like to see more, meet me in photography page.
                 </p>
               </div>
             </div>
