--- a/photography.html
+++ b/photography.html
@@ -268,12 +268,12 @@
         ease: Expo.easeInOut
       });
 
-      t1.staggerFrom(
-        ".menu ul li",
-        1,
-        { y: 100, opacity: 0, ease: Expo.easeOut },
-        0.1
-      );
+      // t1.staggerFrom(
+      //   ".menu ul li",
+      //   1,
+      //   { y: 100, opacity: 0, ease: Expo.easeOut },
+      //   0.1
+      // );
 
       t1.reverse();
       $(document).on("click", ".menu-toggle", function() {
