--- a/contact.html
+++ b/contact.html
@@ -224,15 +224,15 @@
             ease: Expo.easeInOut
         });
 
-        t1.staggerFrom(
-            ".menu ul li",
-            1, {
-                y: 100,
-                opacity: 0,
-                ease: Expo.easeOut
-            },
-            0.1
-        );
+        // t1.staggerFrom(
+        //     ".menu ul li",
+        //     1, {
+        //         y: 100,
+        //         opacity: 0,
+        //         ease: Expo.easeOut
+        //     },
+        //     0.1
+        // );
 
         t1.reverse();
         $(document).on("click", ".menu-toggle", function () {
