--- a/index.html
+++ b/index.html
@@ -114,7 +114,27 @@
           </div>
         </div>
       </section>
-
+      <a name="projects"></a>
+      <section class="project-section">
+        <div class="container-fluid">
+          <div class="projects">
+            <div class="row project-row">
+              <div class="project project-1 col-lg-6">
+                <img
+                  src="project-1.jpg"
+                  class="project-1-img project-img img-responsive fit-image"
+                />
+              </div>
+              <div class="project project-2 col-lg-6">
+                <img
+                  src="project-2.jpg"
+                  class="project-2-img project-img img-responsive fit-image"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <a name="about"></a>
       <section class="about-section">
         <div class="container">
@@ -148,59 +168,20 @@
         </div>
       </section>
 
-      <a name="projects"></a>
-      <section class="project-section">
+      <section>
         <div class="container-fluid">
-          <div class="container">
-            <div class="row">
-              <div class="project-heading col-lg-6">
-                <h1 class="wow fadeInUp" data-wow-delay="0.3s">Welcome</h1>
-                <p class="wow fadeInUp" data-wow-delay="0.4s">
-                  I welcome you to my small photogallery, if you would like to see more, meet me in photography page.
-                </p>
-              </div>
-            </div>
-          </div>
           <div class="projects">
             <div class="row project-row">
               <div class="project project-1 col-lg-6">
-                <img
-                  src="project-1.jpg"
-                  class="project-1-img project-img img-responsive fit-image"
-                />
-              </div>
-              <div class="project project-2 col-lg-6">
-                <img
-                  src="project-2.jpg"
-                  class="project-2-img project-img img-responsive fit-image"
-                />
-              </div>
-            </div>
-            <div class="row project-row">
-              <div class="project project-3 col-lg-6">
                 <img
                   src="project-3.jpg"
                   class="project-3-img project-img img-responsive fit-image"
                 />
               </div>
-              <div class="project project-4 col-lg-6">
+              <div class="project project-2 col-lg-6">
                 <img
                   src="project-4.jpg"
                   class="project-4-img project-img img-responsive fit-image"
-                />
-              </div>
-            </div>
-            <div class="row project-row">
-              <div class="project project-5 col-lg-6">
-                <img
-                  src="project-5.jpg"
-                  class="project-5-img project-img img-responsive fit-image"
-                />
-              </div>
-              <div class="project project-6 col-lg-6">
-                <img
-                  src="project-6.jpg"
-                  class="project-6-img project-img img-responsive fit-image"
                 />
               </div>
             </div>
