added new pages, changed logo icon, etc

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
     <div class="wrapper">
       <section class="hero-section">
         <!-- LOGO -->
-        <div class="hero-logo">
+        <a class="hero-logo" style="cursor: pointer;" href="index.html">
           MH
-        </div>
+        </a>
 
         <!-- TOGGLE BUTTON -->
-        <div class="menu-toggle">
+        <div class="menu-toggle" style="cursor: pointer;">
           <ion-icon name="menu"></ion-icon>
         </div>
 
         <!-- SOCIAL MEDIA ICONS -->
-        <div class="media">
+        <!-- <div class="media">
           <ul>
             <li>
               <a href="https://www.facebook.com/matan.horowitz"><ion-icon name="logo-facebook"></ion-icon></a>
@@ -76,7 +76,7 @@
               <a href="www.twitter.com/matan"><ion-icon name="logo-twitter"></ion-icon></a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- VIEW PHOTOS LINK -->
         <!-- <div class="view-photos">
@@ -103,6 +103,9 @@
               </li>
               <li>
                 <a href="about.html">About</a>
+              </li>
+              <li>
+                <a href="acting.html">Acting</a>
               </li>
               <li>
                 <a href="photography.html">Photography</a>
@@ -144,21 +147,17 @@
             </div>
             <div class="about-content col-lg-6">
               <h3 class="wow fadeInUp" data-wow-delay="0.3s">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Nesciunt esse autem hic!
+                Hello and welcome to my website!
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.4s">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore
-                asperiores voluptates, tenetur incidunt libero at aut culpa
-                atque ab repellat deserunt ullam eaque eum.
+                I’m a young actor, photographer, and artist. I consider myself a global nomad as I grew up in Venezuela,
+                Tanzania, and Israel. Growing up overseas has really influenced how I see the world and how I attempt to
+                communicate that through my art.
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Recusandae quod magnam sequi enim quo laudantium soluta
-                blanditiis quia consectetur, expedita temporibus, cum officiis
-                totam doloremque unde harum dolor, veritatis quae sunt!
-                Repellendus, qui. Corporis voluptas optio doloribus, at quidem
-                cumque?
+                I want us to think about how our actions affect the global community and the ramifications the smallest of
+                changes can make. I believe that humour is not only a way to connect with people but also a way to cope
+                with the stresses of life and I try to live my life with that in mind.
               </p>
               <div class="about-link wow fadeInUp" data-wow-delay="0.6s">
                 <a href="about.html">MORE INFO</a>
@@ -197,25 +196,21 @@
               <h1 class="wow fadeInUp" data-wow-delay="0.2s">Reach out</h1>
             </div>
             <div class="sm-content col-lg-6">
-              <h3 class="wow fadeInUp" data-wow-delay="0.4s">
-                matanrhorowitz@gmail.com
-              </h3>
-              <p class="wow fadeInUp" data-wow-delay="0.5s">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Incidunt quo similique eaque ducimus quibusdam, dolorum
-                reprehenderit cumque. Dolorem, placeat. Similique!
+              <p class="wow fadeInUp" style="padding-top: 20px"data-wow-delay="0.5s">
+                  If you want to reach me please email me or shoot me a text!
               </p>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Distinctio ducimus natus hic dolorem voluptate dolore officiis
-                neque aperiam similique! Obcaecati vel et atque nesciunt quia
-                quis expedita nulla, cum autem eius itaque incidunt, ut delectus
-                vitae. Cupiditate minima debitis aliquam!
-              </p>
+              <div class="wow fadeInUp" style="font-size: 20px;" data-wow-delay="0.4s">
+                  <img src="mail-outline.svg" width="30px" />
+                  matanrhorowitz@gmail.com
+              </div>
+              <div class="wow fadeInUp"  style="margin-top: 10px; font-size: 20px;" data-wow-delay="0.4s">
+                  <img src="call-outline.svg" width="30px" />
+                  301-222-3596
+              </div>
             </div>
           </div>
           <div class="col-lg-12 text-left">
-            <div class="social-icons">
+            <!-- <div class="social-icons">
               <ul>
                 <li class="wow fadeInUp" data-wow-delay="0.7s">
                   <a to="https://www.facebook.com/matan.horowitz">fasscebook</a>
@@ -227,7 +222,7 @@
                   <a href="www.twitter.com/matan">twitter</a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
