--- a/contact.html
+++ b/contact.html
@@ -46,35 +46,14 @@
     <div class="wrapper">
         <section class="hero-section">
             <!-- LOGO -->
-            <div class="hero-logo">
+            <a class="hero-logo" style="cursor: pointer;" href="index.html">
                 MH
-            </div>
-
-            <!-- TOGGLE BUTTON -->
-            <div class="menu-toggle">
+              </a>
+      
+              <!-- TOGGLE BUTTON -->
+              <div class="menu-toggle" style="cursor: pointer;">
                 <ion-icon name="menu"></ion-icon>
-            </div>
-
-            <!-- SOCIAL MEDIA ICONS -->
-            <div class="media">
-                <ul>
-                    <li>
-                        <a href="https://www.facebook.com/matan.horowitz">
-                            <ion-icon name="logo-facebook"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <ion-icon name="logo-instagram"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <ion-icon name="logo-twitter"></ion-icon>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+              </div>
 
             <!-- VIEW PHOTOS LINK -->
             <!-- <div class="view-photos">
@@ -103,6 +82,9 @@
                             <a href="about.html">About</a>
                         </li>
                         <li>
+                          <a href="acting.html">Acting</a>
+                        </li>
+                        <li>
                             <a href="photography.html">Photography</a>
                         </li>
                         <li>
@@ -120,38 +102,21 @@
                     <div class="sm-heading col-lg-6">
                         <h1 class="wow fadeInUp" data-wow-delay="0.2s">Reach out</h1>
                     </div>
-                    <div class="sm-content col-lg-6">
-                        <h3 class="wow fadeInUp" data-wow-delay="0.4s">
-                            matanrhorowitz@gmail.com
-                        </h3>
+                    <div class="sm-content col-lg-6" style="padding-top: 20px; font-size: 20px;">
                         <p class="wow fadeInUp" data-wow-delay="0.5s">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Incidunt quo similique eaque ducimus quibusdam, dolorum
-                            reprehenderit cumque. Dolorem, placeat. Similique!
+                            If you want to reach me please email me or shoot me a text!
                         </p>
-                        <p class="wow fadeInUp" data-wow-delay="0.6s">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Distinctio ducimus natus hic dolorem voluptate dolore officiis
-                            neque aperiam similique! Obcaecati vel et atque nesciunt quia
-                            quis expedita nulla, cum autem eius itaque incidunt, ut delectus
-                            vitae. Cupiditate minima debitis aliquam!
-                        </p>
+                        <div class="wow fadeInUp" style="font-size: 20px;" data-wow-delay="0.4s">
+                            <img src="mail-outline.svg" width="30px" />
+                            matanrhorowitz@gmail.com
+                        </div>
+                        <div class="wow fadeInUp"  style="margin-top: 10px; font-size: 20px;" data-wow-delay="0.4s">
+                            <img src="call-outline.svg" width="30px" />
+                            301-222-3596
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-12 text-right">
-                    <div class="social-icons">
-                        <ul>
-                            <li class="wow fadeInUp" data-wow-delay="0.7s">
-                                <a to="https://www.facebook.com/matan.horowitz">fasscebook</a>
-                            </li>
-                            <li class="wow fadeInUp" data-wow-delay="0.8s">
-                                <a href="#">instagram</a>
-                            </li>
-                            <li class="wow fadeInUp" data-wow-delay="0.9s">
-                                <a href="www.twitter.com/matan">twitter</a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </section>
@@ -318,7 +283,7 @@
                                     return false;
                                 } else {
                                     $target.attr("tabindex",
-                                    "-1"); // Adding tabindex for elements not focusable
+                                        "-1"); // Adding tabindex for elements not focusable
                                     $target.focus(); // Set focus again
                                 }
                             }
