added some changes

--- a/acting.html
+++ b/acting.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="author" content="ig: @harrnish / @codegridweb" />
   <link rel="icon" href="hero-bg.jpg">
-  <title>About - Matan Horowitz</title>
+  <title>Acting - Matan Horowitz</title>
   <link rel="stylesheet" href="style.css" />
 
   <!-- ANIMEJS -->
@@ -62,12 +62,12 @@
 
       <!-- HERO-IMAGE -->
       <div class="hero-img">
-        <img src="hero-bg.jpg" class="about-img" />
+        <img src="headshots/workInProgress.png" class="about-img" style="width: 30%; display: block; margin: auto; margin-bottom: 200px;" />
       </div>
 
       <!-- HERO-TITLE -->
       <div class="hero-title">
-        <h1>ABOUT</h1>
+        <h1>COMING SOON</h1>
       </div>
       <div class="overlay">
         <div class="close-btn">
@@ -93,47 +93,6 @@
           </ul>
         </div>
       </div>
-    </section>
-
-    <a name="about"></a>
-    <section class="about-section">
-      <div class="container">
-        <div class="row">
-          <div class="about-heading col-lg-6">
-            <img src="aboutme.jpg" height="310px" />
-          </div>
-          <div class="about-content col-lg-6">
-            <h3 class="wow fadeInUp" data-wow-delay="0.3s">
-              Hello and welcome to my website!
-            </h3>
-            <p class="wow fadeInUp" data-wow-delay="0.4s">
-              I’m a young actor, photographer, and artist. I consider myself a global nomad as I grew up in Venezuela,
-              Tanzania, and Israel. Growing up overseas has really influenced how I see the world and how I attempt to
-              communicate that through my art.
-            </p>
-            <p class="wow fadeInUp" data-wow-delay="0.5s">
-              I want us to think about how our actions affect the global community and the ramifications the smallest of
-              changes can make. I believe that humour is not only a way to connect with people but also a way to cope
-              with the stresses of life and I try to live my life with that in mind.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <a name="projects"></a>
-    <section class="project-section">
-      <div class="container-fluid">
-        <h1 class="wow fadeInUp resume" data-wow-delay="0.3s">RESUME</h1>
-        <div class="pdf-link wow fadeInUp resume" data-wow-delay="0.6s">
-          <a href="#PORTFOLIO">DOWNLOAD RESUME</a>
-        </div>
-        <h1 class="wow fadeInUp portfolio" data-wow-delay="0.3s">MATAN HOROWITZ</h1>
-        <p class="wow fadeInUp portfolio-1" data-wow-delay="0.4s">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Aliquam quaerat sunt architecto veritatis suscipit nostrum
-          amet dicta ut, nobis modi.
-        </p>
     </section>
   </div>
   <script>
