--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 
             <!-- HERO-IMAGE -->
             <div class="hero-img">
-                <img src="hero-bg.jpg" class="about-img" />
+                <img src="headshots/contactHeader.jpg" class="about-img" />
             </div>
 
             <!-- HERO-TITLE -->
