--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="ig: @harrnish / @codegridweb" />
-    <link rel="icon" href="hero-bg.jpg">
+    <link rel="icon" href="headshots/hero-bg.jpg">
     <title>Matan Horowitz</title>
     <link rel="stylesheet" href="style.css" />
 
@@ -63,29 +63,9 @@
           <ion-icon name="menu"></ion-icon>
         </div>
 
-        <!-- SOCIAL MEDIA ICONS -->
-        <!-- <div class="media">
-          <ul>
-            <li>
-              <a href="https://www.facebook.com/matan.horowitz"><ion-icon name="logo-facebook"></ion-icon></a>
-            </li>
-            <li>
-              <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-            </li>
-            <li>
-              <a href="www.twitter.com/matan"><ion-icon name="logo-twitter"></ion-icon></a>
-            </li>
-          </ul>
-        </div> -->
-
-        <!-- VIEW PHOTOS LINK -->
-        <!-- <div class="view-photos">
-          <a href="#projects">view photos</a>
-        </div> -->
-
         <!-- HERO-IMAGE -->
         <div class="hero-img">
-          <img src="hero-bg.jpg" class="hero-img-parallax" />
+          <img src="headshots/hero-bg.jpg" class="hero-img-parallax" />
         </div>
 
         <!-- HERO-TITLE -->
@@ -124,13 +104,13 @@
             <div class="row project-row">
               <div class="project project-1 col-lg-6">
                 <img
-                  src="project-1.jpg"
+                  src="projectPhotos/project-1.jpg"
                   class="project-1-img project-img img-responsive fit-image"
                 />
               </div>
               <div class="project project-2 col-lg-6">
                 <img
-                  src="project-2.jpg"
+                  src="projectPhotos/project-2.jpg"
                   class="project-2-img project-img img-responsive fit-image"
                 />
               </div>
@@ -173,13 +153,13 @@
             <div class="row project-row">
               <div class="project project-1 col-lg-6">
                 <img
-                  src="project-3.jpg"
+                  src="projectPhotos/project-3.jpg"
                   class="project-3-img project-img img-responsive fit-image"
                 />
               </div>
               <div class="project project-2 col-lg-6">
                 <img
-                  src="project-4.jpg"
+                  src="projectPhotos/project-4.jpg"
                   class="project-4-img project-img img-responsive fit-image"
                 />
               </div>
