--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="author" content="ig: @harrnish / @codegridweb" />
-  <link rel="icon" href="hero-bg.jpg">
+  <link rel="icon" href="headshots/aboutMeHeader.jpg">
   <title>About - Matan Horowitz</title>
   <link rel="stylesheet" href="style.css" />
 
@@ -62,7 +62,7 @@
 
       <!-- HERO-IMAGE -->
       <div class="hero-img">
-        <img src="hero-bg.jpg" class="about-img" />
+        <img src="headshots/aboutHeader.jpg" class="about-img" />
       </div>
 
       <!-- HERO-TITLE -->
@@ -100,7 +100,7 @@
       <div class="container">
         <div class="row">
           <div class="about-heading col-lg-6">
-            <img src="aboutme.jpg" height="310px" />
+            <img src="headshots/aboutme.jpg" height="310px" />
           </div>
           <div class="about-content col-lg-6">
             <h3 class="wow fadeInUp" data-wow-delay="0.3s">
@@ -128,12 +128,7 @@
         <div class="pdf-link wow fadeInUp resume" data-wow-delay="0.6s">
           <a href="#PORTFOLIO">DOWNLOAD RESUME</a>
         </div>
-        <h1 class="wow fadeInUp portfolio" data-wow-delay="0.3s">MATAN HOROWITZ</h1>
-        <p class="wow fadeInUp portfolio-1" data-wow-delay="0.4s">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Aliquam quaerat sunt architecto veritatis suscipit nostrum
-          amet dicta ut, nobis modi.
-        </p>
+        
     </section>
   </div>
   <script>
