--- a/photography.html
+++ b/photography.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="author" content="ig: @harrnish / @codegridweb" />
-  <link rel="icon" href="hero-bg.jpg">
+  <link rel="icon" href="headshots/hero-bg.jpg">
   <title>Photography - Matan Horowitz</title>
   <link rel="stylesheet" href="style.css" />
 
@@ -129,9 +129,6 @@
     <section class="about-section">
       <div class="container">
         <div class="row">
-          <!-- <div class="about-heading col-lg-6">
-            <img src="matanPhotography.jpg" class="project-1-img" height="310px" />
-          </div> -->
           <div class="about-content col-lg-6">
             <h3 class="wow fadeInUp" data-wow-delay="0.3s">
               I love taking photos on film. 
@@ -147,8 +144,6 @@
       </div>
     </section>
 
-    <a name="projects"></a>
-    <section class="project-section">
       <div class="projects">
         <div class="row project-row">
           <div class="project project-1 col-lg-6">
@@ -192,7 +187,6 @@
         </div>
       </div>
   </div>
-  </section>
   </div>
   <script>
     new WOW().init();
@@ -254,7 +248,8 @@
 
     t1.to(".overlay", 1, {
       opacity: 1,
-      ease: Expo.easeInOut
+      ease: Expo.easeInOut,
+      zIndex: 4,
     });
 
     t1.to(".view-photos, .media", 1, {
