--- a/photography.html
+++ b/photography.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="author" content="ig: @harrnish / @codegridweb" />
-  <link rel="icon" href="headshots/hero-bg.jpg">
+  <link rel="icon" href="headshots/About.jpg">
   <title>Photography - Matan Horowitz</title>
   <link rel="stylesheet" href="style.css" />
 
