--- a/acting.html
+++ b/acting.html
@@ -62,7 +62,7 @@
 
       <!-- HERO-IMAGE -->
       <div class="hero-img">
-        <img src="headshots/aboutme.jpg" class="about-img"/>
+        <img src="headshots/actingPhoto.jpg" class="about-img" style="width: 500px"/>
       </div>
 
       <!-- HERO-TITLE -->
